# EEG100Manifesto

./: 404.html  README.md  generate_data.py  generate_schema.sql  index.html  mkdocs.yml  pyproject.toml  sign-form.html
.github/workflows/: build_docs.yml
backend/: backend_setup.md
conclusion/: index.html
contributors/: index.html
democratization/: index.html
docs/: conclusion.md  democratization.md  glossary.md  index.md  intentions.md  introduction.md  references.md  responsibility.md  sign-form.html  signatories.md  signup.md  validity.md
docs/javascript/: extra_javascript.js
docs/stylesheets/: extra.css  floating_buttons.css  form.css  snackbar.css
glossary/: index.html
introduction/: index.html
javascript/: extra_javascript.js
overrides/: main.html
overrides/partials/: footer.html  header.html  nav.html
references/: index.html
responsibility/: index.html
signatories/: index.html
stylesheets/: extra.css  form.css  snackbar.css
validity/: index.html
