[project]
name = "eeg100manifesto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-material>=9.6.5",
    "supabase>=2.17.0",
]
